# sls_sat_solving_with_deep_learning

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Readme.md  _requirements.txt  environment.yml  files.txt  pyproject.toml  requirements.txt  run_all_experiments.sh  run_all_experiments_g4sat.sh  run_all_experiments_random3SAT.sh
.github/workflows/: code_quality.yml  run_tests.yml  security-check-conda-env.yml  security-check.yml
experiment_configurations/: config_LCG_DM.yaml  config_LCG_LLL_DM.yaml  config_LCG_LLL_alt_DM.yaml
experiment_tracking/: experiement_tracking.ipynb  experiment_tracking.ipynb
experiments/: run_3SAT_aws.sh  run_3SAT_aws_NEW.sh  run_3SAT_aws_NEW2.sh  run_3SAT_aws_NEW_LLL.sh  run_3SAT_aws_right_inv_temp.sh  run_3SAT_aws_right_layer_number.sh  run_3SAT_aws_right_layer_number_LLL.sh  run_3SAT_aws_vcg_lll.sh  run_blocksworld_aws.sh  run_blocksworld_aws_batchsize.sh  run_blocksworld_aws_right_temp.sh  run_broadcast_test_aws.sh  run_broadcast_test_aws_NEW.sh  run_broadcast_test_aws_batchsize.sh  run_k_color.sh
experiments/474146218474267442/: meta.yaml
experiments/810514637047068928/: meta.yaml
experiments/configs/: config.yaml  config_LCG_DM.yaml  (+9 more)
src/: benchmark_moser_walker.ipynb  benchmarking_violated_constraints.ipynb  constraint_problems.py  data_utils.py  evaluate_kissat.py  lib.rs  model.py  moser_net_jax.ipynb  moser_net_pytorch.ipynb  params.pkl  random_walk.py  test_MK.ipynb  test_MK_train.ipynb  train.py
tests/: tests_constraint_problems.py
(+17760 files in other folders)
