[package]
name = "moser_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "rust/src/lib.rs"
name = "moser_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.8.5"
rand_distr = "0.4"
varisat = "0.2.2"
